[project]
name = "guiD47calib"
version = "0.1.1"
description = "GUI for D47calib"
readme = "readme.md"
authors = [
    { name = "mdaeron", email = "mathieu@daeron.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
guiD47calib = "guiD47calib:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
