[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "guid47calib"
authors = [{name = "Mathieu Daëron", email = "daeron@lsce.ipsl.fr"}]
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
Home = "https://github.com/mdaeron/guiD47calib"
Documentation = "https://mdaeron.github.io/guiD47calib"

[project.scripts]
guid47calib = "guid47calib:main"
